hphp/test/zend/good/ext/json/tests/bug47644.php
<?php

for ($i = 10000000000000000; $i < 10000000000000006; $i++) {
	var_dump(json_decode("[$i]"));
}


echo "Done\n";
?>